# OpenDA

./: .env.example  .gitignore  EXECUTION_PLAN.md  LICENSE  OpenDA.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: config.py  database.py
backend/app/api/routes/: da.py  health.py
backend/app/models/: __init__.py  audit_log.py  base.py  cost_item.py  disbursement_account.py  port_call.py
backend/app/schemas/: deviation.py  fda.py  pda.py
backend/app/services/: deviation_engine.py  extraction_service.py  llm_provider.py  state_machine.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_deviation_engine.py  test_smoke.py
extractor/: Dockerfile  main.py  pyproject.toml
extractor/app/: config.py
extractor/app/schemas/: fda.py  pda.py
extractor/app/services/: extraction_service.py  llm_provider.py
frontend-accountant/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend-accountant/src/: App.tsx  index.css
frontend-accountant/src/api/: daApi.ts
frontend-accountant/src/components/: FlagBadge.tsx  ItemForm.tsx  PDFViewer.tsx  SubmitButton.tsx
frontend-accountant/src/pages/: ReviewPage.tsx
frontend-accountant/src/store/: daStore.ts
frontend-accountant/src/types/: index.ts
frontend-operator/: Dockerfile  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend-operator/src/: App.tsx  index.css
frontend-operator/src/api/: daApi.ts
frontend-operator/src/components/: ApproveButton.tsx  DeviationTable.tsx  JustificationInput.tsx  PDFModal.tsx  SummaryBar.tsx
frontend-operator/src/pages/: OperatorPage.tsx
frontend-operator/src/types/: index.ts
test_data/: generate_fixtures.py  smoke_test_schemas.py
