[project]
name = "openda-backend"
version = "1.0.0"
description = "OpenDA — AI Disbursement Account Analyzer (Backend)"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Document AI
    "docling>=2.0.0",
    # LLM
    "anthropic>=0.29.0",
    # API framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # Job queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",
    # HTTP client (webhooks)
    "httpx>=0.27.0",
    # File handling
    "python-multipart>=0.0.9",
    # PDF generation (test fixtures)
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",          # async test client
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
