[project]
name = "openda-extractor"
version = "1.0.0"
description = "OpenDA — Extraction microservice (Docling + LiteLLM)"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Document AI — heavy deps, isolated here so the backend stays slim
    "docling>=2.0.0",
    # LLM — provider-agnostic gateway
    "litellm>=1.40.0",
    # API framework (lightweight HTTP server for internal calls only)
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Data validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
